# VoiceNet

./: .env.example  .gitignore  README.md  pyproject.toml
cdr/: cdr_parsers.py  models.py  serializers.py  tests.py  urls.py  views.py
cdr/migrations/: 0001_initial.py
config/: settings.py  urls.py
